--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
  body {margin:0; padding:0;} /* remove top and left whitespace */
 canvas {display:block;}
+
+#embedly-logo{
+  height:120px;
+  position:absolute;
+}
 
